@@ -12,6 +12,7 @@
 - add vips_bandfold()/vips_bandunfold()
 - dzsave supports zip output > 4gb, thanks benjamin
 - add support for HSV colourspace [Jonas Øgaard]
+- skip oversized markers in jpeg write
 
 7/5/15 started 8.0.3
 - dzsave and tif pyr write could fail for some image dimensions, thanks Jonas
